[package]
name = "reflow-plate-rp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = [] }
embassy-sync = { version = "0.5.0", features = [] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt",  "integrated-timers"] }
embassy-time = { version = "0.3.0", features = [] }
embassy-rp = { version = "0.1.0", features = [ "unstable-pac", "time-driver", "critical-section-impl", "intrinsics", "rom-v2-intrinsics", "run-from-ram"] }
embassy-usb = { version = "0.1.0", features = [] }
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = [] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.1.0" }
cyw43 = { version = "0.1.0", features = [ "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = [ "overclock"] }

fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
st7789 = "0.7.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8"
usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = [] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
micromath = { version = "2.1.0" }

bincode = { git = "ssh://git@github.com/bincode-org/bincode.git", version = "2.0.0-rc.3", default-features = false, features = ["derive"] }

simplestaticstring = { git = "ssh://git@github.com/mzoworka/simplestaticstring-rust.git" }
ssd1306 = { version = "0.8.4" }
pid-lite = { version = "1.2.0", default-features = false }

[profile.release]
debug = 2
